--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port = 9500
 
 # MySQLデータベース接続設定
 spring.datasource.url=jdbc:mysql://localhost:3306/todo?serverTimezone=JST
+#spring.datasource.url=jdbc:mysql://192.168.0.21:3306/todo?serverTimezone=JST
 spring.datasource.username=todo
 spring.datasource.password=todotodo
 
